Add lupax as owner to AI Assistant

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,7 +1,7 @@
 # This file describes who owns and is responsible for maintaining each extension registration
 
 /registry/cristianadam.dracula @cristianadam
-/registry/theqtcompany.aiassistant @Maddimax
+/registry/theqtcompany.aiassistant @Maddimax @lupax
 /registry/theqtcompany.vale @Maddimax
 /registry/theqtcompany.cpp @Maddimax
 
