--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,6 +1,7 @@
 # This file describes who owns and is responsible for maintaining each extension registration
 
 /registry/cristianadam.dracula @cristianadam
+/registry/cristianadam.onedarkpro @cristianadam
 /registry/cristianadam.phantomstyle @cristianadam
 /registry/theqtcompany.aiassistant @Maddimax @lupax
 /registry/theqtcompany.vale @Maddimax
