Add "TabbedEditor" plugin

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -4,6 +4,7 @@
 /registry/cristianadam.nomoicontheme @cristianadam
 /registry/cristianadam.onedarkpro @cristianadam
 /registry/cristianadam.phantomstyle @cristianadam
+/registry/cristianadam.tabbededitor @cristianadam
 /registry/theqtcompany.aiassistant @Maddimax @lupax
 /registry/theqtcompany.vale @Maddimax
 /registry/theqtcompany.cpp @Maddimax
