Add "Minimap" plugin

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,6 +1,7 @@
 # This file describes who owns and is responsible for maintaining each extension registration
 
 /registry/cristianadam.dracula @cristianadam
+/registry/cristianadam.minimap @cristianadam
 /registry/cristianadam.nomoicontheme @cristianadam
 /registry/cristianadam.onedarkpro @cristianadam
 /registry/cristianadam.phantomstyle @cristianadam
