Add "Doxygen" plugin

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,5 +1,6 @@
 # This file describes who owns and is responsible for maintaining each extension registration
 
+/registry/cristianadam.doxygen @cristianadam
 /registry/cristianadam.dracula @cristianadam
 /registry/cristianadam.minimap @cristianadam
 /registry/cristianadam.nomoicontheme @cristianadam
