add me and Levi to CODEOWNERS
Signed-off-by: Christian Rauch <Rauch.Christian@gmx.de>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -11,6 +11,8 @@
 /registry/theqtcompany.vale @Maddimax
 /registry/theqtcompany.cpp @Maddimax
 
+/registry/rosindustrial.rosprojectmanager @christian-rauch @Levi-Armstrong
+
 # The basic stuff is owned by the Qt Creator team
 
 /CODEOWNERS @qt-creator/qt-creator-team
