--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -7,6 +7,7 @@
 /registry/cristianadam.onedarkpro @cristianadam
 /registry/cristianadam.phantomstyle @cristianadam
 /registry/cristianadam.tabbededitor @cristianadam
+/registry/ggml.llamacpp @cristianadam
 /registry/theqtcompany.aiassistant @Maddimax @lupax
 /registry/theqtcompany.vale @Maddimax
 /registry/theqtcompany.cpp @Maddimax
